<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>easy_handeye2</name>
    <version>0.5.0</version>
    <description>
        Simple, hardware-independent ROS2 library for hand-eye calibration
    </description>
    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>
    <author email="esposito@imfusion.com">Marco Esposito</author>
    <license>LGPLv3</license>

    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>easy_handeye2_msgs</exec_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>python-transforms3d-pip</exec_depend>
    <exec_depend>python3-opencv</exec_depend>

    <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin_calibrator.xml" />
        <rqt_gui plugin="${prefix}/plugin_evaluator.xml" />
        <build_type>ament_python</build_type>
    </export>
</package>
