<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_handeye2_msgs</name>
  <version>0.5.0</version>
  <description>Message formats to perform a hand-eye calibration from sampled tf transforms</description>

  <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

  <license>LGPLv3</license>

  <author email="esposito@imfusion.com">Marco Esposito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
